Bug 691182 - Regression: problem with -dDOINTERPOLATE
Summary: Regression: problem with -dDOINTERPOLATE
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Regression (show other bugs)
Version: master
Hardware: PC Linux
: P1 normal
Assignee: Robin Watts
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-17 17:09 UTC by Marcos H. Woehrmann
Modified: 2013-09-17 07:48 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments
Bug690770.pdf (891.31 KB, application/pdf)
2010-03-17 17:09 UTC, Marcos H. Woehrmann
Details
car4.pdf (302.99 KB, application/pdf)
2013-09-17 05:25 UTC, Robin Watts
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2010-03-17 17:09:15 UTC
Created attachment 6073 [details]
Bug690770.pdf

Starting with r7647 the attached PDF file has dropouts when rendered with  -dDOINTERPOLATE (the image is too dark when rendered with older revisions but the problem is the same as with head).

The command line I'm using:

  bin/gs -dDOINTERPOLATE -sDEVICE=ppmraw -o test.ppm ./Bug690770.pdf
Comment 1 Ray Johnston 2010-03-18 16:52:02 UTC
Sounds like an color or image interpolation filter issue. Assigning to Micahel (sorry Michael).
Comment 2 Michael Vrhel 2013-09-16 14:00:48 UTC
One of the images is a type 3 image, which consists of a cmyk image and a bit mask image.   The clip mask image is not being interpolated but is using the image_simple_expand renderer while the CMYK image is using image_render_interpolate_icc (with interpolation).  Note,  you can avoid and transparency headaches by doing -dNOTRANSPARENCY and you will still see the issue.
Comment 3 Robin Watts 2013-09-17 03:18:42 UTC
Just to be clear here... the complaint is about the jaggies on the edge of the shadow under the car?
Comment 4 Robin Watts 2013-09-17 05:25:53 UTC
Created attachment 10205 [details]
car4.pdf

Simplified file.
Comment 5 Robin Watts 2013-09-17 07:48:58 UTC
Fixed in:

commit 5347e2c3e43a28f64b0e4775945c6a58ee72debf
Author: Robin Watts <robin.watts@artifex.com>
Date:   Tue Sep 17 13:50:56 2013 +0100

    Bug 691182: Disable interpolation for Type3 postscript images

    If we interpolate an image, but not its mask we get nasty edge
    effects. We therefore choose not to interpolate either.