Bug 691182: Disable interpolation for Type3 postscript images

If we interpolate an image, but not its mask we get nasty edge
effects. We therefore choose not to interpolate either.